Fixing issue with portfolio items overflowing their bounds

--- a/src/styles/6-components/_cards.scss
+++ b/src/styles/6-components/_cards.scss
@@ -14,6 +14,7 @@
 }
 
 .card--btn {
+  overflow: hidden;
   animation: bounceOutReturn $transitionDur $transitionEasing forwards;
 
   &:hover,
